Setup Javafx with spring boot

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.4'
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
+	id "org.openjfx.javafxplugin" version "0.0.13"
 }
 
 group = 'com.SGS-J'
@@ -19,6 +20,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+javafx {
+	version = '19'
+	modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
