--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.main.web-application-type=none
 spring.application.ui.title=Saturn 
+
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/saturnsystemdb
+
+server.port=3000
