--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.application.ui.title=Saturn
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/saturnsystemdb
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=3000
