--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
+	maven {url 'https://jitpack.io'}
 }
 
 dependencies {
@@ -23,11 +24,13 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 
+	implementation 'com.github.Dansoftowner:PDFViewerFX:0.8'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 javafx {
-	modules = [ 'javafx.controls', 'javafx.fxml']
+	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web']
 }
 
 tasks.named('test') {
