--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 
 	implementation 'com.github.Dansoftowner:PDFViewerFX:0.8'
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
