--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
 	id "org.openjfx.javafxplugin" version "0.0.13"
+	id 'application'
 }
 
 group = 'com.SGS-J'
@@ -31,7 +32,15 @@ dependencies {
 }
 
 javafx {
-	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web']
+	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.base']
+}
+
+application {
+	mainClass = 'com.SGSJ.Saturn.MainAppInitializer'
+}
+
+tasks.jar {
+	manifest.attributes["Main-Class"] = "com.SGSJ.Saturn.MainAppInitializer"
 }
 
 tasks.named('test') {
