--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.ui.title=Saturn 
+spring.application.domain.cors=https://sgs-j.github.io
 
 spring.datasource.username=root
 spring.datasource.password=root
