--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.ui.title=Saturn 
 spring.application.domain.cors=https://sgs-j.github.io
 
 spring.datasource.username=root
@@ -7,3 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/saturnsystemdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=8080
+spring.profiles.active=dev
