--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/saturnsystemdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=8080
-spring.profiles.active=dev
+spring.profiles.active=prod
