--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.domain.cors=https://sgs-j.github.io
 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/saturnsystemdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
